IDP-1608 - Ability to supplement the list of default MetadataNodeProcessors
https://issues.shibboleth.net/jira/browse/IDP-1608